Fixed Image Styling So it doesn't stretch

--- a/client/src/components/pages/Dashboard/LatestActivity/LatestActivityList/ListItem/ListItem.scss
+++ b/client/src/components/pages/Dashboard/LatestActivity/LatestActivityList/ListItem/ListItem.scss
@@ -10,6 +10,8 @@
         border-radius: 50%;
         width: 35px;
         height: 35px;
+        object-fit: cover;
+        object-position: 50% 50%;
         position:relative;
         top:50%;
         transform:translateY(-50%);
